2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/usermod.c: Refuse to unlock an account when it would
	result in a passwordless account.  Based on Openwall's patch
	shadow-4.0.4.1-owl-usermod-unlock.diff.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c (path_prefix): Make sure that the prefix is the
	name of a directory (not only the beginning of a directory).
	Openwall patch shadow-4.0.4.1-owl-userdel-path_prefix.diff.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Do not give an indication that the group has no
	password.
	* src/newgrp.c: Do not only bail on syslog if the password is not
	valid. Also give an indication to the user on stderr.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	Fixes from Openwall patch shadow-4.0.4.1-owl-chage-drop-priv.diff:
	* src/chage.c: Remove cleanup(). pw_lock is never called. Replace
	cleanup(2) by spw_unlock and remove the calls to cleanup(1).
	* src/chage.c: Remove variable pwrw. It is always set to 0. The
	password database is always read only.
	* src/chage.c: Make chage -l also drop the saved GID.
	* src/chage.c: Prefer setregid/setreuid to setgid/setuid.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	Fixes from Openwall patch shadow-4.0.4.1-alt-man.diff:
	* man/useradd.8.xml: Indicate that the NIS caveats is also valid
	for any external database as LDAP.
	* man/groupadd.8.xml: Likewise.
	* man/groupadd.8.xml: Reorder and reformat the caveats bullets.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Applied Debian patch 409_man_generate_from_PO to
	automatically generate the translated manpages from the POs.
	* man/Makefile.am: Replace the individual rules for the generation
	of the manpages (from XML) by a generic Makefile rule an
	dependencies for the linked manpages.
	* man/generate_translations.mak: Generic rules for all the